@@ -16,7 +16,7 @@
  * See the file "license.terms" for information on usage and redistribution of
  * this file, and for a DISCLAIMER OF ALL WARRANTIES.
  *
- * RCS: @(#) $Id: tclCmdIL.c,v 1.50.2.63 2010/02/25 21:53:06 dgp Exp $
+ * RCS: @(#) $Id: tclCmdIL.c,v 1.50.2.64 2010/03/01 12:55:48 dgp Exp $
  */
 
 #include "tclInt.h"
@@ -487,6 +487,7 @@ InfoArgsCmd(
     procPtr = TclFindProc(iPtr, name);
     if (procPtr == NULL) {
 	Tcl_AppendResult(interp, "\"", name, "\" isn't a procedure", NULL);
+	Tcl_SetErrorCode(interp, "TCL", "LOOKUP", "PROCEDURE", name, NULL);
 	return TCL_ERROR;
     }
 
@@ -547,6 +548,7 @@ InfoBodyCmd(
     procPtr = TclFindProc(iPtr, name);
     if (procPtr == NULL) {
 	Tcl_AppendResult(interp, "\"", name, "\" isn't a procedure", NULL);
+	Tcl_SetErrorCode(interp, "TCL", "LOOKUP", "PROCEDURE", name, NULL);
 	return TCL_ERROR;
     }
 
@@ -975,6 +977,8 @@ InfoDefaultCmd(
     procPtr = TclFindProc(iPtr, procName);
     if (procPtr == NULL) {
 	Tcl_AppendResult(interp, "\"", procName, "\" isn't a procedure",NULL);
+	Tcl_SetErrorCode(interp, "TCL", "LOOKUP", "PROCEDURE", procName,
+		NULL);
 	return TCL_ERROR;
     }
 
@@ -1005,6 +1009,7 @@ InfoDefaultCmd(
 
     Tcl_AppendResult(interp, "procedure \"", procName,
 	    "\" doesn't have an argument \"", argName, "\"", NULL);
+    Tcl_SetErrorCode(interp, "TCL", "LOOKUP", "ARGUMENT", argName, NULL);
     return TCL_ERROR;
 
   defStoreError:
@@ -1128,6 +1133,8 @@ InfoFrameCmd(
     levelError:
 	Tcl_AppendResult(interp, "bad level \"", TclGetString(objv[1]), "\"",
 		NULL);
+	Tcl_SetErrorCode(interp, "TCL", "LOOKUP", "STACK_FRAME",
+		TclGetString(objv[1]), NULL);
 	return TCL_ERROR;
     }
 
@@ -1523,6 +1530,8 @@ InfoLevelCmd(
   levelError:
     Tcl_AppendResult(interp, "bad level \"", TclGetString(objv[1]), "\"",
 	    NULL);
+    Tcl_SetErrorCode(interp, "TCL", "LOOKUP", "STACK_LEVEL",
+	    TclGetString(objv[1]), NULL);
     return TCL_ERROR;
 }
 
@@ -3987,12 +3996,14 @@ Tcl_LsortObjCmd(
  *	"repeated" elements in each of the left and right lists. In that case,
  *	if any element of the left list is equivalent to one in the right list
  *	it is omitted from the merged list.
- *	This simplified mechanism works because of the special way
- *	our MergeSort creates the sublists to be merged and will fail to
- *	eliminate all repeats in the general case where they are already
- *	present in either the left or right list. A general code would need to
- *	skip adjacent initial repeats in the left and right lists before
- *	comparing their initial elements, at each step.
+ *
+ *	This simplified mechanism works because of the special way our
+ *	MergeSort creates the sublists to be merged and will fail to eliminate
+ *	all repeats in the general case where they are already present in
+ *	either the left or right list. A general code would need to skip
+ *	adjacent initial repeats in the left and right lists before comparing
+ *	their initial elements, at each step.
+ *
  *----------------------------------------------------------------------
  */
 
